--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "require": {},
   "autoload": {
     "psr-4": {
-      "Mannfy\\Contac\\": "src/"
+      "Mannfy\\Contact\\": "src/"
     }
   },
   "extra": {
